// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshots should applies correct alignment classes 1`] = `
<div>
  <p
    class="typography typography--base typography--default typography--alignment-center"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should applies correct font family classes 1`] = `
<div>
  <p
    class="typography typography--base typography--mono typography--default"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should applies correct hidden classes 1`] = `
<div>
  <p
    class="typography typography--base typography--default typography--hidden"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should applies correct line clamp classes 1`] = `
<div>
  <p
    class="typography typography--base typography--default typography--line-clamp-2"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should applies correct size classes 1`] = `
<div>
  <p
    class="typography typography--base typography--default typography--md"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should applies correct skin classes 1`] = `
<div>
  <p
    class="typography typography--base typography--primary"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should applies correct space classes 1`] = `
<div>
  <p
    class="typography typography--base typography--default typography--space-x-md typography--space-y-xl"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should applies correct variation classes 1`] = `
<div>
  <p
    class="typography typography--base typography--default typography--italic typography--uppercase"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should applies correct weight classes 1`] = `
<div>
  <p
    class="typography typography--base typography--default typography--extra-bold"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should applies correct white space classes 1`] = `
<div>
  <p
    class="typography typography--base typography--default typography--white-space-nowrap"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should render additional classes 1`] = `
<div>
  <p
    class="typography typography--base typography--default other-class"
  >
    Text
  </p>
</div>
`;

exports[`Text Snapshots should renders component as anchor 1`] = `
<div>
  <a
    class="typography typography--link typography--default"
    href="#"
  >
    Text
  </a>
</div>
`;

exports[`Text Snapshots should renders component as heading 1`] = `
<div>
  <h1
    class="typography typography--display-1 typography--default"
  >
    Text
  </h1>
</div>
`;

exports[`Text Snapshots should renders default component 1`] = `
<div>
  <p
    class="typography typography--base typography--default"
  >
    Text
  </p>
</div>
`;
